Primeiro bot e bot checando usuário válido

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,10 @@
 // renomear este arquivo para .env
 const token = ''
+const authorized_client_ids = []
 
 module.exports = {
     token,
     apiUrl: `https://api.telegram.org/bot${token}`,
-    apiFileUrl: `https://api.telegram.org/file/bot${token}`
+    apiFileUrl: `https://api.telegram.org/file/bot${token}`,
+    authorized_client_ids
 }
