--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/douglasbelinato/demo-telegram-bot#readme",
   "dependencies": {
+    "axios": "0.17.1",
     "telegraf": "3.17.3"
   }
 }
