--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/douglasbelinato/demo-telegram-bot#readme",
   "dependencies": {
     "axios": "0.17.1",
+    "moment": "2.20.1",
     "telegraf": "3.17.3"
   }
 }
