--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "moment": "2.20.1",
+    "node-schedule": "1.3.0",
     "telegraf": "3.17.3"
   }
 }
